{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 69,
  "lineage": "a973cff2-7738-38bf-3868-9bd729e53ece",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway/backendAddressPools/images-pool",
                "ip_addresses": [
                  "10.0.0.5"
                ],
                "name": "images-pool"
              },
              {
                "fqdns": [],
                "id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway/backendAddressPools/videos-pool",
                "ip_addresses": [
                  "10.0.0.4"
                ],
                "name": "videos-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway/backendHttpSettingsCollection/HTTPSetting",
                "name": "HTTPSetting",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": null,
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway/frontendIPConfigurations/front-end-ip-config",
                "name": "front-end-ip-config",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/publicIPAddresses/gateway-ip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway/frontendPorts/front-end-port",
                "name": "front-end-port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway/gatewayIPConfigurations/gateway-ip-config",
                "name": "gateway-ip-config",
                "subnet_id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/appsubnet"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway/frontendIPConfigurations/front-end-ip-config",
                "frontend_ip_configuration_name": "front-end-ip-config",
                "frontend_port_id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway/frontendPorts/front-end-port",
                "frontend_port_name": "front-end-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway/httpListeners/gateway-listener",
                "name": "gateway-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway",
            "identity": [],
            "location": "northeurope",
            "name": "app-gateway",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "",
                "http_listener_id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway/httpListeners/gateway-listener",
                "http_listener_name": "gateway-listener",
                "id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway/requestRoutingRules/RoutingRuleA",
                "name": "RoutingRuleA",
                "priority": 1,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "PathBasedRouting",
                "url_path_map_id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway/urlPathMaps/RoutingPath",
                "url_path_map_name": "RoutingPath"
              }
            ],
            "resource_group_name": "app-grp",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": null,
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [
              {
                "default_backend_address_pool_id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway/backendAddressPools/videos-pool",
                "default_backend_address_pool_name": "videos-pool",
                "default_backend_http_settings_id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway/backendHttpSettingsCollection/HTTPSetting",
                "default_backend_http_settings_name": "HTTPSetting",
                "default_redirect_configuration_id": "",
                "default_redirect_configuration_name": "",
                "default_rewrite_rule_set_id": "",
                "default_rewrite_rule_set_name": "",
                "id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway/urlPathMaps/RoutingPath",
                "name": "RoutingPath",
                "path_rule": [
                  {
                    "backend_address_pool_id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway/backendAddressPools/images-pool",
                    "backend_address_pool_name": "images-pool",
                    "backend_http_settings_id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway/backendHttpSettingsCollection/HTTPSetting",
                    "backend_http_settings_name": "HTTPSetting",
                    "firewall_policy_id": "",
                    "id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway/urlPathMaps/RoutingPath/pathRules/imagesRoutingRule",
                    "name": "imagesRoutingRule",
                    "paths": [
                      "/images/*"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "",
                    "rewrite_rule_set_name": ""
                  },
                  {
                    "backend_address_pool_id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway/backendAddressPools/videos-pool",
                    "backend_address_pool_name": "videos-pool",
                    "backend_http_settings_id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway/backendHttpSettingsCollection/HTTPSetting",
                    "backend_http_settings_name": "HTTPSetting",
                    "firewall_policy_id": "",
                    "id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/applicationGateways/app-gateway/urlPathMaps/RoutingPath/pathRules/videosRoutingRule",
                    "name": "videosRoutingRule",
                    "paths": [
                      "/videos/*"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "",
                    "rewrite_rule_set_name": ""
                  }
                ]
              }
            ],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.interface",
            "azurerm_public_ip.gatewayip",
            "azurerm_resource_group.appgrp",
            "azurerm_subnet.appsubnet",
            "azurerm_subnet.subnetA",
            "azurerm_virtual_network.appnetwork",
            "azurerm_windows_virtual_machine.vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "images",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/networkInterfaces/images-interface",
            "internal_domain_name_suffix": "f3ym4b4k13fe1kflfb5t2u1vtg.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/SubnetA"
              }
            ],
            "location": "northeurope",
            "name": "images-interface",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "app-grp"
          },
          "dependencies": [
            "azurerm_resource_group.appgrp",
            "azurerm_subnet.subnetA",
            "azurerm_virtual_network.appnetwork"
          ]
        },
        {
          "index_key": "videos",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/networkInterfaces/videos-interface",
            "internal_domain_name_suffix": "f3ym4b4k13fe1kflfb5t2u1vtg.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/SubnetA"
              }
            ],
            "location": "northeurope",
            "name": "videos-interface",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "app-grp"
          },
          "dependencies": [
            "azurerm_resource_group.appgrp",
            "azurerm_subnet.subnetA",
            "azurerm_virtual_network.appnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "appnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "location": "northeurope",
            "name": "app-nsg",
            "resource_group_name": "app-grp",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 400,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.appgrp",
            "azurerm_virtual_network.appnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "gatewayip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/publicIPAddresses/gateway-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.69.138.116",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "gateway-ip",
            "resource_group_name": "app-grp",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_network_interface.interface",
            "azurerm_resource_group.appgrp",
            "azurerm_subnet.subnetA",
            "azurerm_virtual_network.appnetwork",
            "azurerm_windows_virtual_machine.vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/appsubnet",
            "name": "appsubnet",
            "resource_group_name": "app-grp",
            "virtual_network_name": "app-network"
          },
          "dependencies": [
            "azurerm_network_interface.interface",
            "azurerm_resource_group.appgrp",
            "azurerm_subnet.subnetA",
            "azurerm_virtual_network.appnetwork",
            "azurerm_windows_virtual_machine.vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnetA",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/SubnetA",
            "name": "SubnetA",
            "resource_group_name": "app-grp",
            "virtual_network_name": "app-network"
          },
          "dependencies": [
            "azurerm_resource_group.appgrp",
            "azurerm_virtual_network.appnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "appnsg-link",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/SubnetA",
            "network_security_group_id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "subnet_id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/SubnetA"
          },
          "dependencies": [
            "azurerm_network_security_group.appnsg",
            "azurerm_resource_group.appgrp",
            "azurerm_subnet.subnetA",
            "azurerm_virtual_network.appnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "appnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "07cf702f-dfca-4d4a-a8ab-287f3e53759e",
            "id": "/subscriptions/16966bae-4faf-4432-9b3d-68cf0be4f613/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network",
            "location": "northeurope",
            "name": "app-network",
            "resource_group_name": "app-grp"
          },
          "dependencies": [
            "azurerm_resource_group.appgrp"
          ]
        }
      ]
    }
  ]
}